<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdvancedFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>





                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_2"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"
                        android:padding="2dp"
                        android:text="@string/basic_3"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_4"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_5"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_6"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>




                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_7"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>




                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_8"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>




                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_9"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_9"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>




                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_10"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_10"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>




                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_11"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_11"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_12"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_12"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_13"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_13"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/CardViewBasic_14"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:clickable="true"

                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/textViewBasic_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:clickable="true"

                        android:padding="2dp"
                        android:text="@string/basic_14"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4d4d4d"
                        android:textFontWeight="1" />


                </android.support.v7.widget.CardView>



            </LinearLayout>








        </LinearLayout>





    </ScrollView>

</FrameLayout>